Fix unwanted scrollbar on forward/back footer links
Fixes #602

--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -28,7 +28,6 @@
   flex: 1;
   order: 2;
   max-width: $default-max-width;
-  overflow: auto;
 }
 
 .guideListWrapper {
